infra/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        volumeMounts:
          - mountPath: /data
            name: v-name
        image: adrienducourthial/big_data_backend:latest
      volumes:
        - name: v-name
          persistentVolumeClaim:
            claimName: pvc-name
