infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-webapp
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
